# FileSorter

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
include/: Enums.hpp  FileObtainer.hpp  FileSorter.hpp
include/PathBuilders/: JPGBuilder.hpp  PNGBuilder.hpp  PathBuilder.hpp  VideoBuilder.hpp
include/utilities/: Helper.hpp
res/: addRightMouseClick.reg
src/: CMakeLists.txt  FileObtainer.cpp  FileSorter.cpp  main.cpp
src/PathBuilders/: CMakeLists.txt  JPGBuilder.cpp  PNGBuilder.cpp  PathBuilder.cpp  VideoBuilder.cpp
src/exceptions/: CMakeLists.txt  DirectoryNotFoundException.cpp
src/utilities/: CMakeLists.txt  Helper.cpp
src/utilties/: Helper.cpp
